# discordpp-experiment

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/discord/: CMakeLists.txt
src/discord/include/discord/: discord.h  id.h
src/discord/include/discord/objects/: channel.h
src/discord/src/: discord.cpp  id.cpp
src/discord/src/objects/: channel.cpp
src/http/: CMakeLists.txt
src/http/include/http/: http.h
src/http/src/: http.cpp
src/sockets/: CMakeLists.txt
src/sockets/include/sockets/: sockets.h  ssl.h
src/sockets/src/: sockets.cpp  ssl.cpp
src/utility/: CMakeLists.txt
src/utility/include/utility/: data.h  io.h  json.h  optional.h  parser.h  swap.h
src/utility/src/: data.cpp  json.cpp  parser.cpp
src/websocket/: CMakeLists.txt
src/websocket/include/websocket/: websocket.h
src/websocket/src/: websocket.cpp
